[tool.poetry]
name = "radium-test-task"
version = "0.0.1"
description = "My solution to the test task for the Backend-developer vacancy from the Radium company."
authors = ["Devrishev Nadir"]
license = "None"
readme = "README.md"
packages = [{include = "radium_test_task"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.4"
requests = "^2.28.2"
aiofile = "^3.8.5"
nitpick = "^0.33.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "nitpick/all.toml"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true


[tool.pytest.ini_options]
testpaths = [ "tests"]
python_files = "test*.py"
addopts = "-rsxX -l --tb=short --strict-markers --doctest-modules"
xfail_strict = "true"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
flake8-pytest-style = "^1.3.0"
flake8-SQL = "^0.4.1"
flake8-annotations = "^2.4.1"
flake8-logging-format = "^0.8.1"
flake8-spellcheck = "^0.28.0"
isort = "^5.7.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.5"
Faker = "^15.1.0"
pytest-snapshot = "^0.9.0"

[tool.poetry.group.dev.dependencies.pytest-xdist]
extras = [ "psutil",]
version = "^3.0.2"
